# unsloth-rs

./: Cargo.toml  LICENSE  README.md  demo_compat.py  pyproject.toml  test_export.py  train_real.py
.github/workflows/: release.yml
src/: device_type.rs  lib.rs  python.rs  save.rs  trainer.rs
src/dataprep/: loader.rs  mod.rs
src/kernels/: cross_entropy_loss.rs  fast_lora.rs  geglu.rs  layernorm.rs  linear.rs  mod.rs  rms_layernorm.rs  rope_embedding.rs  swiglu.rs
src/models/: cohere.rs  gemma.rs  gemma2.rs  granite.rs  llama.rs  loader.rs  lora.rs  mistral.rs  mod.rs  qwen2.rs  vision.rs  weights.rs
src/utils/: chat_templates.rs  mod.rs  tokenizer_utils.rs
tests/: test_grads.rs  test_save_load.rs  test_training_integration.rs
unsloth_native/: __init__.py  model.py
