[package]
name = "unsloth_rs"
version = "0.1.0"
edition = "2021"
description = "Fast, efficient implementation of Unsloth optimization kernels and training loop in Rust."
license = "Apache-2.0"
repository = "https://github.com/Moaisus-admin/unsloth-rs"
keywords = ["machine-learning", "llm", "lora", "optimization", "cuda"]
categories = ["science"]
readme = "README.md"

[lib]
name = "unsloth_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
once_cell = "1.19" # For lazy initialization / caching like @functools.cache
log = "0.4"
# tch = "0.15" # Uncomment when libtorch is available in the environment
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"
rayon = "1.8"
candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
candle-transformers = { version = "0.9.1", features = ["cuda"] }
candle-flash-attn = { version = "0.9.1", optional = true }
tokenizers = "0.19"
regex = "1.10"
pyo3 = { version = "0.24.1", features = ["extension-module"] }


[dev-dependencies]
tempfile = "3.8"
bytemuck = "1.14"

[features]
default = []
flash-attn = ["dep:candle-flash-attn"]
