[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "unsloth_rs"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/Moaisus-admin/unsloth-rs"
Issues = "https://github.com/Moaisus-admin/unsloth-rs/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
